examples/test/testpolicy11423.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11423
  namespace: namespace125
spec:
  podSelector:
    matchLabels:
      key38: value39
      key19: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value13
          key13: value23
      podSelector:
        matchLabels:
          key47: value28
          key28: value0
          key10: value36
